# Simple-Ansi-Colors

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: sansic.hpp
lib/: CMakeLists.txt  sansic.cpp  sansic.hpp  sansicConfig.cmake
